changes occures during sonar analyses